--- a/build
+++ b/build
@@ -39,7 +39,7 @@ unset newProg
 #
 
 OUT="${progDir}/out"
-PROJECTS=(host blort frotz)
+PROJECTS=(host blort frotz missing-import missing-export)
 
 CC=cc
 COMPILE_C=("${CC}" -g -c)
