Try to detect gcc vs. clang.

--- a/build
+++ b/build
@@ -41,13 +41,22 @@ unset newProg
 OUT="${progDir}/out"
 PROJECTS=(host all-good missing-import missing-export weak-import)
 
+UNAME="$(uname)"
+
 CC=cc
 COMPILE_C=("${CC}" -std=c99 -g -c)
 LINK_BIN=("${CC}" -g)
 
-# Note: The GNU equivalent to `-dynamiclib` seems to be `-shared`, and
-# the equivalent to `-undefined dynamic_lookup` seems to be `-Ur`.
-LINK_LIB=("${CC}" -g -dynamiclib -undefined dynamic_lookup)
+# Figure out if we're using Clang or Gcc, and set up build commands
+# accordingly.
+if (cc -v 2>&1 | grep clang) > /dev/null; then
+    LINK_LIB=("${CC}" -g -dynamiclib -undefined dynamic_lookup)
+elif (cc -v 2>&1 | grep gcc) > /dev/null; then
+    LINK_LIB=("${CC}" -g -shared -Ur)
+else
+    echo 'Unknown compiler version. Sorry!' 1>&2
+    exit 1
+fi
 
 
 #
