More consistent compiler detection; clearer exposition.

--- a/build
+++ b/build
@@ -54,26 +54,40 @@ LINK_BIN=("${CC}" -g)
 
 # Figure out if we're using Clang or Gcc, and set up build commands
 # accordingly.
-if (cc -v 2>&1 | grep clang) > /dev/null; then
-    # `-dynamiclib` -- Output a dynamic-linked (shared) library.
-    # `-undefined dynamic_lookup` -- Allow missing/unlinked symbols in the
-    #   output. Cause these symbols to be looked up at library load/runtime.
-    LINK_LIB=("${CC}" -g -dynamiclib -undefined dynamic_lookup)
-elif (cc -v 2>&1 | grep gcc) > /dev/null; then
-    # `-fPIC` -- Produce position-independent code.
-    COMPILE_LIB_C=("${COMPILE_C[@]}" -fPIC)
-    # `-shared` -- Output a dynamic-linked (shared) library.
-    # `-Ur` -- Allow missing/unlinked symbols in the output. Cause these
-    #   symbols to be looked up at library load/runtime.
-    LINK_LIB=("${CC}" -g -shared -Ur)
-    # `-rdynamic` -- Export symbols defined in the binary such that they
-    #   may be found by runtime-loaded libraries.
-    # `-ldl` -- Link this binary with the `dl` (dynamic linker) library.
-    LINK_BIN=("${LINK_BIN[@]}" -rdynamic -ldl)
-else
-    echo 'Unknown compiler. Sorry!' 1>&2
-    exit 1
-fi
+
+WHAT_CC="$("${CC}" --version | awk '
+    BEGIN          { result = "unknown"   }
+    /clang/        { result = "clang"     }
+    /gcc/ || /GCC/ { result = "gcc"       }
+    END            { printf("%s", result) }
+')"
+
+case "${WHAT_CC}" in
+    (clang)
+        # `-dynamiclib` -- Output a dynamic-linked (shared) library.
+        # `-undefined dynamic_lookup` -- Allow missing/unlinked symbols in the
+        #   output. Cause these symbols to be looked up at library load/runtime.
+        LINK_LIB=("${CC}" -g -dynamiclib -undefined dynamic_lookup)
+    ;;
+    (gcc)
+        # `-fPIC` -- Produce position-independent code.
+        COMPILE_LIB_C=("${COMPILE_C[@]}" -fPIC)
+
+        # `-shared` -- Output a dynamic-linked (shared) library.
+        # `-Ur` -- Allow missing/unlinked symbols in the output. Cause these
+        #   symbols to be looked up at library load/runtime.
+        LINK_LIB=("${CC}" -g -shared -Ur)
+
+        # `-rdynamic` -- Export symbols defined in the binary such that they
+        #   may be found by runtime-loaded libraries.
+        # `-ldl` -- Link this binary with the `dl` (dynamic linker) library.
+        LINK_BIN=("${LINK_BIN[@]}" -rdynamic -ldl)
+    ;;
+    (*)
+        echo 1>&2 "Sorry: Cannot use compiler: ${WHAT_CC}"
+        exit 1
+    ;;
+esac
 
 
 #
