--- a/build
+++ b/build
@@ -53,8 +53,25 @@ COMPILE_LIB_C=("${COMPILE_C[@]}")
 LINK_BIN=("${CC}" -g)
 LINK_BIN_SUFFIX=()
 
-# Figure out if we're using Clang or Gcc, and set up build commands
+# Figure out what OS and compiler we have, and set up build commands
 # accordingly.
+
+if [[ ${OSTYPE} == '' ]]; then
+    OSTYPE="$(uname)"
+fi
+
+case "${OSTYPE}" in
+    (linux* | Linux*)
+        WHAT_OS='linux'
+    ;;
+    (darwin* | Darwin* | *bsd* | *BSD*)
+        WHAT_OS='bsd'
+    ;;
+    (*)
+        echo 1>&2 "Sorry: Unknown OS type: ${OSTYPE}"
+        exit 1
+    ;;
+esac
 
 WHAT_CC="$("${CC}" --version | awk '
     BEGIN          { result = "unknown"   }
@@ -62,6 +79,12 @@ WHAT_CC="$("${CC}" --version | awk '
     /gcc/ || /GCC/ { result = "gcc"       }
     END            { printf("%s", result) }
 ')"
+
+if [[ ${WHAT_CC} == 'unknown' ]]; then
+    echo 1>&2 'Sorry: Unknown compiler'
+    "${CC}" --version 1>&2
+    exit 1
+fi
 
 case "${WHAT_CC}" in
     (clang)
@@ -85,10 +108,6 @@ case "${WHAT_CC}" in
         #   Needs to come at the end of the link command.
         LINK_BIN=("${LINK_BIN[@]}" -rdynamic -ldl)
         LINK_BIN_SUFFIX=(-ldl)
-    ;;
-    (*)
-        echo 1>&2 "Sorry: Cannot use compiler: ${WHAT_CC}"
-        exit 1
     ;;
 esac
 
