--- a/build
+++ b/build
@@ -110,7 +110,8 @@ case "${WHAT_OS}" in
     (bsd)
         # `-dynamiclib` -- Output a dynamic-linked (shared) library.
         # `-undefined dynamic_lookup` -- Allow missing/unlinked symbols in the
-        #   output. Cause these symbols to be looked up at library load/runtime.
+        #   output. That will cause such symbols to be looked up when the
+        #   library is loaded or run.
         LINK_LIB+=(-dynamiclib -undefined dynamic_lookup)
     ;;
     (linux)
