--- a/build
+++ b/build
@@ -54,8 +54,7 @@ LINK_BIN=("${CC}" -g)
 LINK_BIN_SUFFIX=()
 LINK_LIB=("${CC}" -g)
 
-# Figure out what OS and compiler we have, and set up build commands
-# accordingly.
+# Figure out what OS we have, and set up build commands accordingly.
 
 if [[ ${OSTYPE} == '' ]]; then
     OSTYPE="$(uname)"
@@ -71,28 +70,6 @@ case "${OSTYPE}" in
     (*)
         echo 1>&2 "Sorry: Unknown OS type: ${OSTYPE}"
         exit 1
-    ;;
-esac
-
-WHAT_CC="$("${CC}" --version | awk '
-    BEGIN          { result = "unknown"   }
-    /clang/        { result = "clang"     }
-    /gcc/ || /GCC/ { result = "gcc"       }
-    END            { printf("%s", result) }
-')"
-
-if [[ ${WHAT_CC} == 'unknown' ]]; then
-    echo 1>&2 'Sorry: Unknown compiler'
-    "${CC}" --version 1>&2
-    exit 1
-fi
-
-case "${WHAT_CC}" in
-    (clang)
-        : # Nothing extra to add.
-    ;;
-    (gcc)
-        : # Nothing extra to add.
     ;;
 esac
 
